--- a/menu.html
+++ b/menu.html
@@ -815,7 +815,7 @@
             }
 
             .category-section h2 {
-                font-size: 20px;
+                font-size: 40px;
                 margin-bottom: 10px;
             }
 
@@ -1098,6 +1098,41 @@
                     </div>
                     <div class="menu-card">
                         <span class="top-seller-icon">★</span>
+                        <img src="findihanhnhan.png"
+                             onerror="this.src='logo.png'"
+                             alt="Almond milk coffee">
+                        <h3>Phindi hạnh nhân</h3>
+                        <p>1 shot espresso, syrup hạnh nhân, sữa đặc, sữa tươi, whipping cream cùng với topping thạch cafe.</p>
+                        <div class="size-prices">
+                            <div class="size-price">
+                                <span class="size">M</span>
+                                <span class="price">25</span>
+                            </div>
+                            <div class="size-price">
+                                <span class="size">L</span>
+                                <span class="price">33</span>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="menu-card">
+                        <img src="cacaosuada.png"
+                             onerror="this.src='logo.png'"
+                             alt="Cacao milk shake">
+                        <h3>Cacao sữa đá</h3>
+                        <p>Cacao nguyên chất, sữa đặc.</p>
+                        <div class="size-prices">
+                            <div class="size-price">
+                                <span class="size">M</span>
+                                <span class="price">19</span>
+                            </div>
+                            <div class="size-price">
+                                <span class="size">L</span>
+                                <span class="price">22</span>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="menu-card">
+                        <span class="top-seller-icon">★</span>
                         <img src="cacaolatte.png"
                              onerror="this.src='logo.png'"
                              alt="Cacao latte">
@@ -1115,20 +1150,19 @@
                         </div>
                     </div>
                     <div class="menu-card">
-                        <span class="top-seller-icon">★</span>
-                        <img src="cacaosuada.png"
+                        <img src="cacaokemmuoi.png"
                              onerror="this.src='logo.png'"
-                             alt="Cacao milk shake">
-                        <h3>Cacao sữa đá</h3>
-                        <p>Cacao nguyên chất, sữa đặc.</p>
+                             alt="Vietnamese Salted Coffee">
+                        <h3>Cacao muối</h3>
+                        <p>Cacao nguyên chất, sữa đặc, whipping cream, muối hồng himalaya, cùng với topping hạt nổ phô mai</p>
                         <div class="size-prices">
                             <div class="size-price">
                                 <span class="size">M</span>
-                                <span class="price">19</span>
+                                <span class="price">24</span>
                             </div>
                             <div class="size-price">
                                 <span class="size">L</span>
-                                <span class="price">22</span>
+                                <span class="price">28</span>
                             </div>
                         </div>
                     </div>
@@ -1139,11 +1173,66 @@
                 <h2>Tea</h2>
                 <div class="menu-grid">
                     <div class="menu-card">
+                        <span class="top-seller-icon">★</span>
+                        <img src="tralaidacthom.png"
+                             onerror="this.src='logo.png'"
+                             alt="Blueberry Tea">
+                        <h3>Trà Lài Đác Thơm</h3>
+                        <p>Thơm, hạt đác, trà lài</p>
+                        <div class="size-prices">
+                            <div class="size-price">
+                                <span class="size">M</span>
+                                <span class="price">28</span>
+                            </div>
+                            <div class="size-price">
+                                <span class="size">L</span>
+                                <span class="price">33</span>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="menu-card">
+                        <span class="top-seller-icon">★</span>
+                        <img src="matchalatte.png"
+                             onerror="this.src='logo.png'"
+                             alt="Matcha Latte">
+                        <h3>Matcha latte</h3>
+                        <p>Matcha nhật, sữa yến mạch, thơm nhẹ</p>
+                        <div class="size-prices">
+                            <div class="size-price">
+                                <span class="size">M</span>
+                                <span class="price">25</span>
+                            </div>
+                            <div class="size-price">
+                                <span class="size">L</span>
+                                <span class="price">33</span>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="menu-card">
+                        <span class="top-seller-icon">★</span>
+                        <img src="matchataro.jpg"
+                             onerror="this.src='logo.png'"
+                             alt="Matcha Latte">
+                        <h3>Khoai môn Matcha latte</h3>
+                        <p>Matcha nhật, khoai môn, sữa yến mạch, thơm nhẹ cùng với topping hạt nổ phô mai</p>
+                        <div class="size-prices">
+                            <div class="size-price">
+                                <span class="size">M</span>
+                                <span class="price">28</span>
+                            </div>
+                            <div class="size-price">
+                                <span class="size">L</span>
+                                <span class="price">33</span>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="menu-card">
+                        <span class="top-seller-icon">★</span>
                         <img src="tradao.png"
                              onerror="this.src='logo.png'"
                              alt="Peach Tea">
                         <h3>Trà đào</h3>
-                        <p>Trà, đào tươi, thanh mát, ngọt dịu</p>
+                        <p>Trà, đào tươi, thanh mát, ngọt dịu cùng với topping hạt nổ củ năng</p>
                         <div class="size-prices">
                             <div class="size-price">
                                 <span class="size">M</span>
@@ -1199,42 +1288,6 @@
                             <div class="size-price">
                                 <span class="size">M</span>
                                 <span class="price">28</span>
-                            </div>
-                            <div class="size-price">
-                                <span class="size">L</span>
-                                <span class="price">33</span>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="menu-card">
-                        <span class="top-seller-icon">★</span>
-                        <img src="tralaidacthom.png"
-                             onerror="this.src='logo.png'"
-                             alt="Blueberry Tea">
-                        <h3>Trà Lài Đác Thơm</h3>
-                        <p>Thơm, hạt đác, trà lài</p>
-                        <div class="size-prices">
-                            <div class="size-price">
-                                <span class="size">M</span>
-                                <span class="price">28</span>
-                            </div>
-                            <div class="size-price">
-                                <span class="size">L</span>
-                                <span class="price">33</span>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="menu-card">
-                        <span class="top-seller-icon">★</span>
-                        <img src="matchalatte.png"
-                             onerror="this.src='logo.png'"
-                             alt="Matcha Latte">
-                        <h3>Matcha latte</h3>
-                        <p>Matcha nhật, sữa yến mạch, thơm nhẹ</p>
-                        <div class="size-prices">
-                            <div class="size-price">
-                                <span class="size">M</span>
-                                <span class="price">25</span>
                             </div>
                             <div class="size-price">
                                 <span class="size">L</span>
