--- a/menu.html
+++ b/menu.html
@@ -993,9 +993,9 @@
                     <li onmouseenter="toggleDropdown()" onmouseleave="toggleDropdown()" class="dropdown">
                         <a onclick="showMenu()">Menu</a>
                         <ul id="dropdown-content" class="dropdown-content">
-                            <li><a href="#" onclick="scrollToCategory('Coffee')">Coffee</a></li>
-                            <li><a href="#" onclick="scrollToCategory('Tea')">Tea</a></li>
-                            <li><a href="#" onclick="scrollToCategory('Juice')">Juice</a></li>
+                            <li><a href="#" onclick="scrollToCategory('Coffee');">Coffee</a></li>
+                            <li><a href="#" onclick="scrollToCategory('Tea');">Tea</a></li>
+                            <li><a href="#" onclick="scrollToCategory('Juice');">Juice</a></li>
                         </ul>
                     </li>
                     <li><a href="#event" onclick="showEvent(); document.getElementById('menu-toggle').checked = false;">Event</a></li>
@@ -1083,9 +1083,9 @@
             <div class="flex flex-col md:flex-row gap-8 items-start">
                 <aside id="sidebar" class="w-full md:w-1/4 lg:w-1/5 sticky top-36">
                     <div class="menu-sidebar flex flex-col gap-4">
-                        <a onclick="scrollToCategory('Coffee')" style="font-size: 18px; font-weight: bold; color: #666; margin: 0; text-align: left; cursor: pointer;">Coffee</p>
-                        <a onclick="scrollToCategory('Tea')" style="font-size: 18px; font-weight: bold; color: #666; margin: 0; text-align: left; cursor: pointer;">Tea</p>
-                        <a onclick="scrollToCategory('Juice')" style="font-size: 18px; font-weight: bold; color: #666; margin: 0; text-align: left; cursor: pointer;">Juice</p>
+                        <a onclick="scrollToCategory('Coffee')" style="font-size: 18px; font-weight: bold; color: #666; margin: 0; text-align: left; cursor: pointer;">Coffee</a>
+                        <a onclick="scrollToCategory('Tea')" style="font-size: 18px; font-weight: bold; color: #666; margin: 0; text-align: left; cursor: pointer;">Tea</a>
+                        <a onclick="scrollToCategory('Juice')" style="font-size: 18px; font-weight: bold; color: #666; margin: 0; text-align: left; cursor: pointer;">Juice</a>
                     </div>
                 </aside>
                 <div class="w-full">
