--- a/menu.html
+++ b/menu.html
@@ -1179,7 +1179,7 @@
                             </div>
                             <div class="menu-card">
                                 <span class="top-seller-icon">★</span>
-                                <img src="findihanhnhan.png"
+                                <img src="phindi.png"
                                      onerror="this.src='logo.png'"
                                      alt="Almond milk coffee">
                                 <h3>Phindi hạnh nhân</h3>
