--- a/menu.html
+++ b/menu.html
@@ -1200,7 +1200,7 @@
                                      onerror="this.src='logo.png'"
                                      alt="Almond milk coffee">
                                 <h3>Phindi hạnh nhân</h3>
-                                <p>1 shot espresso, syrup hạnh nhân, sữa đặc, sữa tươi, whipping cream cùng với topping thạch cafe.</p>
+                                <p>1 shot espresso, sữa đặc, sữa tươi hương hạnh nhân cùng với topping thạch cafe.</p>
                                 <div class="size-prices">
                                     <div class="size-price">
                                         <span class="size">M</span>
